# nirvlpmud

./: ACCESS.ALLOW  INACTIVE  LD_NEWS  LP_SWAP.3.loafy  LP_SWAP.3.mail  List_n_Clean  MANAGEMENT  MAR27  NEWS  NEWS.121206  NEWS.old  NEWS2  NEWSPAPER  Nirvana.err  ROOT_BAK  SORT_LEVEL  SORT_LOGINS  SORT_PRES  SORT_QP  SORT_TKILLS  SORT_WIZ  TESTLISTT  TOP_QP  UNP  WELCOME  WIZ90  WIZARDS  WIZLIST  WIZLVLS  WIZLVLSIN  WIZNEWS  WIZNEWS_OCT2013  WIZ_OCT2002  b  bakup_b  bakup_cprs  bakup_cprs_tgz  bakup_muds  blah  dd.c  (+59 more)
banish/: billy.old  pestilence.o.miz
basic/: alias.c  autoload.c  autoloading.c  breakable.c  cloned.c  coloured_string.c  container.c  create.c  damageable.c  debug.c  debug.h  description.c  encumbrance.c  event_listener.c  fakeitem.c  hold.c  holdable.c  id.c  info.c  parser.c  (+14 more)
log/: ADD_MONEY  ADD_MONEY.old  ADD_XP  ADD_XP.old  ADVANCE  ADVANCE.old  ATTRIB  ATTRIB.old  ATTRIB2  ATTRIB2.old  AUCTION  BAD_PLAYER  BAD_PLAYER.old  BIGEXP  BIGEXP.old  BIND  BOUNTIES  BUGS.old  BodSwap  CASA_SCAM  CLEAN  CLEAN.old  COMMAND  COSMO  COSMO.old  Clinic  Clinic2  DARKFIRE  DEATHS  DEATHS.old  DEATHS.older  DESTRUCT  DLOG  DLOG.old  DUMPALLOBJ  ED  ED_OTHER  ED_OTHER.old  EMERGENCY  ENTER  (+163 more)
log/WR/: LIB_REPORT  SNAKESPEAR_WORKREPORT  WORKREPORT  WORK_REPORT  WORK_REPORT.10NOV07  WORK_REPORT.20110401  aingeal_workreport  angel_workreport  anshar_workreport  antipode_workreport  arrina_workreport  balowski_workreport  beck_workreport  brittany_workreport  caelin_workreport  catt_workreport  chax_workreport  chip_workreport  cloud_workreport  cobain_workreport  coldwind_workreport  cosmo_workreport  daranath_workreport  darkfire_workreport  data_workreport  desiree_workreport  dragnar_workreport  dune_workreport  dusan_workreport  earwax_libreport  earwax_workreport  earwax_workreport.old  eurale_workreport.old  ew_workreport  exe_workreport  fakir_workreport  feldegast_workreport  feldegast_workreport.older  forbin_workreport.old  francesco_workreport  (+76 more)
log/lib/: RM
log/mboxes/: angel.mbox  boltar.mbox  brittany.mbox  earwax.mbox  fakir.mbox  forbin.mbox  francesco.mbox  fred.mbox  illarion.mbox  jaraxle.mbox  khrell.mbox  mizan.mbox  mizan.mbox.old  mosobp.mbox  sparrow.mbox  vertebraker.mbox  vital.mbox  wicket.mbox  x.mbox
log/rep_files/: hurtbrain.rep  lew.rep  mizan.rep  vertebraker.rep
log/user/: testChars.txt
(+66607 files in other folders)
